1. Fix CodeQL SSRF issue 2. Add Httpcore5 v5.2.4 to solve URL SSRF issue.