@@ -21,6 +21,7 @@ import java.io.FileNotFoundException;
 import java.net.URL;
 import java.net.URLConnection;
 
+import org.apache.hc.core5.net.URIBuilder;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -67,7 +68,10 @@ public abstract class ResourceLoader<V> implements Loader<ResourceInfo, V> {
 			try {
 				URL url = src.url;
 				// prevent SSRF warning
-				url = new URL(url.getProtocol(), url.getHost(), url.getPort(), url.getFile());
+				url = new URIBuilder().setScheme(url.getProtocol())
+						.setHost(url.getHost()).setPort(url.getPort())
+						.setPath(url.getPath()).setCustomQuery(url.getQuery())
+						.build().toURL();
 				conn = url.openConnection();
 				final long v = conn.getLastModified();
 				return v != -1 ? v : 0; //not to reload (5.0.6 for better performance)
